# UnitTestCICD

./: .gitignore  CMakeLists.txt
.github/workflows/: unit-tests.yml
include/: logger.h  utils.h
src/: logger.cpp  main.cpp  test.cpp
